--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,26 +1,30 @@
 ---
 driver:
   name: vagrant
+  customize:
+    memory: 1024
+    cpus: 2
+
 
 provisioner:
   name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
+  log_level: info
+  require_chef_omnibus: 12.18.31
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
   - name: centos-7.2
 
 suites:
   - name: default
     run_list:
-      - recipe[chef-alfresco-db::default]
+      - recipe[alfresco-db::default]
+      - recipe[alfresco-utils::node_json]      
     verifier:
       inspec_tests:
-        - test/smoke/default
+        - name: chef-alfresco-inspec-mysql
+          path: test/integration/mysql
     attributes:
