--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services: docker
 
 env:
   matrix:
-    - SUITE=mysql
+    - SUITE=default
 
 before_install:
   - curl -L https://www.getchef.com/chef/install.sh | sudo bash -s -- -P chefdk -v 1.2.20
