--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -14,6 +14,12 @@ verifier:
 
 platforms:
   - name: centos-7.2
+    driver_config:
+      platform: centos
+      run_command: /usr/sbin/init
+      privileged: true
+      require_chef_omnibus: 12.18.31
+
 
 suites:
   - name: default
