--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -30,4 +30,5 @@ suites:
       inspec_tests:
         - name: chef-alfresco-inspec-mysql
           git: https://github.com/Alfresco/chef-alfresco-inspec-mysql.git
+          tag: v1.1
     attributes:
